networking/gw-n0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer0-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer0.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer1-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer1.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer2-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer2.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer3-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer3.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer4-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer4.org0.com"
      tls:
        mode: PASSTHROUGH
