networking/gw-n1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: p0o1-gateway
  namespace: n1
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "peer0.org1.net"
      tls:
        mode: PASSTHROUGH
---
