networking/eventstore.se2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eventstore-hlf-cc
  namespace: n2
spec:
  hosts:
    - eventstore-hlf-cc
  http:
    - route:
        - destination:
            host: eventstore-hlf-cc.n1.svc.cluster.local
            port:
              number: 7052
