networking/istio-n0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer0-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer0.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer1-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer1.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer2-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer2.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer3-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer3.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderer4-gw
  namespace: n0
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "orderer4.org0.com"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: p0o1-hlf-peer
  namespace: n0
spec:
  hosts:
    - peer0.org1.net
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o0-hlf-ord
  namespace: n0
spec:
  hosts:
    - orderer0.org0.com
    - o0-hlf-ord
  gateways:
    -  orderer0-gw
  tls:
    - match:
        - port: 15443
          sniHosts:
            - orderer0.org0.com
        - port: 7050
          sniHosts:
            - o0-hlf-ord
      route:
        - destination:
            host: o0-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - route:
        - destination:
            host: o0-hlf-ord.n0.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o1-hlf-ord
  namespace: n0
spec:
  hosts:
    - orderer1.org0.com
    - o1-hlf-ord
  gateways:
    -  orderer1-gw
  tls:
    - match:
        - port: 15443
          sniHosts:
            - orderer1.org0.com
        - port: 7050
          sniHosts:
            - o1-hlf-ord
      route:
        - destination:
            host: o1-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - route:
        - destination:
            host: o1-hlf-ord.n0.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o2-hlf-ord
  namespace: n0
spec:
  hosts:
    - orderer2.org0.com
    - o2-hlf-ord
  gateways:
    -  orderer2-gw
  tls:
    - match:
        - port: 15443
          sniHosts:
            - orderer2.org0.com
        - port: 7050
          sniHosts:
            - o2-hlf-ord
      route:
        - destination:
            host: o2-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - route:
        - destination:
            host: o2-hlf-ord.n0.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o3-hlf-ord
  namespace: n0
spec:
  hosts:
    - orderer3.org0.com
    - o3-hlf-ord
  gateways:
    -  orderer3-gw
  tls:
    - match:
        - port: 15443
          sniHosts:
            - orderer3.org0.com
        - port: 7050
          sniHosts:
            - o3-hlf-ord
      route:
        - destination:
            host: o3-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - route:
        - destination:
            host: o3-hlf-ord.n0.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o4-hlf-ord
  namespace: n0
spec:
  hosts:
    - orderer4.org0.com
    - o4-hlf-ord
  gateways:
    -  orderer4-gw
  tls:
    - match:
        - port: 15443
          sniHosts:
            - orderer4.org0.com
        - port: 7050
          sniHosts:
            - o4-hlf-ord
      route:
        - destination:
            host: o4-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - route:
        - destination:
            host: o4-hlf-ord.n0.svc.cluster.local
---
