networking/istio-n1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: p0o1-gateway
  namespace: n1
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "peer0.org1.net"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o0-hlf-ord
  namespace: n1
spec:
  hosts:
    - orderer0.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o1-hlf-ord
  namespace: n1
spec:
  hosts:
    - orderer1.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o2-hlf-ord
  namespace: n1
spec:
  hosts:
    - orderer2.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o3-hlf-ord
  namespace: n1
spec:
  hosts:
    - orderer3.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o4-hlf-ord
  namespace: n1
spec:
  hosts:
    - orderer4.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: p0o1-hlf-peer
  namespace: n1
spec:
  hosts:
    - peer0.org1.net
    - p0o1-hlf-peer
  gateways:
    -  p0o1-gateway
  tls:
    - match:
        - port: 15443
          sniHosts:
            - peer0.org1.net
        - port: 7051
          sniHosts:
            - p0o1-hlf-peer
      route:
        - destination:
            host: p0o1-hlf-peer.n1.svc.cluster.local
            port:
              number: 7051
    - match:
        - port: 7052
          sniHosts:
            - p0o1-hlf-peer
      route:
        - destination:
            host: p0o1-hlf-peer.n1.svc.cluster.local
            port:
              number: 7052
#  http:
#    - match:
#        - port: 9443
#      route:
#        - destination:
#            host: p0o1-hlf-peer.n1.svc.cluster.local
#            port:
#              number: 9443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eventstore-hlf-cc
  namespace: n1
spec:
  hosts:
    - eventstore-hlf-cc
  http:
    - route:
        - destination:
            host: eventstore-hlf-cc.n1.svc.cluster.local
            port:
              number: 7052
