networking/istio-n2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: p0o2-gateway
  namespace: n2
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - "peer0.org2.net"
        - "gupload.org2.net"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o0-hlf-ord
  namespace: n2
spec:
  hosts:
    - orderer0.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o1-hlf-ord
  namespace: n2
spec:
  hosts:
    - orderer1.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o2-hlf-ord
  namespace: n2
spec:
  hosts:
    - orderer2.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o3-hlf-ord
  namespace: n2
spec:
  hosts:
    - orderer3.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: o4-hlf-ord
  namespace: n2
spec:
  hosts:
    - orderer4.org0.com
  location: MESH_EXTERNAL
  ports:
    - number: 15443
      name: https
      protocol: TLS
  resolution: NONE
