networking/vs-n1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: p0o1-hlf-peer
  namespace: n1
spec:
  hosts:
    - peer0.org1.net
    - p0o1-hlf-peer
  gateways:
    -  p0o1-gateway
  tls:
    - match:
        - port: 15443
          sniHosts:
            - peer0.org1.net
        - port: 7051
          sniHosts:
            - p0o1-hlf-peer
      route:
        - destination:
            host: p0o1-hlf-peer.n1.svc.cluster.local
            port:
              number: 7051
  http:
    - route:
        - destination:
            host: p0o1-hlf-peer.n1.svc.cluster.local
