networking/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o0
  namespace: n0
spec:
  hosts:
  - orderer0.org0.com
  gateways:
    -  o0-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
        - orderer0.org0.com
    route:
    - destination:
        host: o0-hlf-ord.n0.svc.cluster.local
        port:
          number: 7050
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: o0-hlf-ord.n0.svc.cluster.local
        port:
          number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o1
  namespace: n0
spec:
  hosts:
    - orderer1.org0.com
#  gateways:
#    -  o1-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer1.org0.com
      route:
        - destination:
            host: o1-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: o1-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o2
  namespace: n0
spec:
  hosts:
    - orderer2.org0.com
#  gateways:
#    -  o2-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer2.org0.com
      route:
        - destination:
            host: o2-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: o2-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o3
  namespace: n0
spec:
  hosts:
    - orderer3.org0.com
#  gateways:
#    -  o3-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer3.org0.com
      route:
        - destination:
            host: o3-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: o3-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o4
  namespace: n0
spec:
  hosts:
    - orderer4.org0.com
#  gateways:
#    -  o4-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer4.org0.com
      route:
        - destination:
            host: o4-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: o4-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
